# scooterouter

./: .clangd  .gitignore  CMakeLists.txt  README.md  create_stubs.sh  vcpkg.json
benchmark/: bench_planners.cpp
data/scooters/: fleet.csv
include/core/: Edge.h  Graph.h  Node.h  Types.h
include/map/: CoordinateProjector.h  CostMap.h  OSMLoader.h  ObstacleInflation.h
include/planner/: AStar.h  BFS.h  DStarLite.h  Dijkstra.h  Heuristic.h  PlannerInterface.h
include/routing/: FleetManager.h  MissionController.h  PriorityScorer.h  RouteOptimizer.h  Scooter.h
include/viz/: FrontierLayer.h  MapLayer.h  PathLayer.h  Renderer.h  ScooterLayer.h  UIOverlay.h
scripts/: download_osm.sh  generate_fleet.py
src/: main.cpp
src/core/: Edge.cpp  Graph.cpp  Node.cpp
src/map/: CoordinateProjector.cpp  CostMap.cpp  OSMLoader.cpp  ObstacleInflation.cpp
src/planner/: AStar.cpp  BFS.cpp  DStarLite.cpp  Dijkstra.cpp
src/routing/: FleetManager.cpp  MissionController.cpp  PriorityScorer.cpp  RouteOptimizer.cpp  Scooter.cpp
src/viz/: FrontierLayer.cpp  MapLayer.cpp  PathLayer.cpp  Renderer.cpp  ScooterLayer.cpp  UIOverlay.cpp
tests/: test_optimizer.cpp
